--- a/app/src/main/res/drawable/background_enabled_button.xml
+++ b/app/src/main/res/drawable/background_enabled_button.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#2e7d32"/>
+    <solid android:color="#00c000"/>
     <corners android:radius="5dp"/>
 
 </shape>
