--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#FF8800</color>
     <color name="colorPrimaryDark">@color/color_main</color>
     <color name="colorAccent">@color/color_main</color>
 
