Исправлена загрузка маркдаун фотографий и документов

--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -157,4 +157,11 @@
         android:padding="8dp"
         android:enabled="true" />
 
+    <TextView
+        android:id="@+id/VersionSDK"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/versionSDK" />
+
 </LinearLayout>
