--- a/chat/src/main/res/layout/activity_show_media_dialog2.xml
+++ b/chat/src/main/res/layout/activity_show_media_dialog2.xml
@@ -15,9 +15,11 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        android:minHeight="60dp"
+        android:layout_height="?android:actionBarSize"
         android:background="@color/com_crafttalk_chat_black_translucent"
+        android:minHeight="56dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
