update background color in photoview

--- a/chat/src/main/res/layout/activity_show_media_dialog2.xml
+++ b/chat/src/main/res/layout/activity_show_media_dialog2.xml
@@ -10,7 +10,8 @@
     <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/image_show"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/cardview_light_background" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
