--- a/chat/src/main/res/layout/com_crafttalk_chat_view_host.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_view_host.xml
@@ -43,16 +43,16 @@
         android:id="@+id/infoChatState"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/com_crafttalk_chat_ubuntu_regular"
         android:paddingHorizontal="20dp"
         android:paddingVertical="15dp"
         android:text="@string/com_crafttalk_chat_stete_synchronization"
-        android:fontFamily="@font/com_crafttalk_chat_ubuntu_regular"
         android:textFontWeight="400"
-        android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="gone" />
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/search"
