Revert "Merge pull request #51 from crafttalk/bkc-1067"
This reverts commit 29a16933a4d867c87b71eeb38266b6f740962cff, reversing
changes made to 95c1909409268ce92ce23fae30d193c8bb900a00.

--- a/chat/src/main/res/layout/com_crafttalk_chat_view_host.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_view_host.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    android:id="@+id/chat_layout"
-    >
+    android:id="@+id/chat_layout">
 
     <TextView
         android:id="@+id/chatOffMessage"
@@ -37,20 +36,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/search"
         app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
+        tools:visibility="gone" />
 
     <TextView
         android:id="@+id/infoChatState"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/com_crafttalk_chat_ubuntu_regular"
         android:paddingHorizontal="20dp"
         android:paddingVertical="15dp"
         android:text="@string/com_crafttalk_chat_stete_synchronization"
+        android:fontFamily="@font/com_crafttalk_chat_ubuntu_regular"
         android:textFontWeight="400"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
 
