--- a/chat/src/main/res/layout/com_crafttalk_chat_layout_user_feedback.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_layout_user_feedback.xml
@@ -27,8 +27,8 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/com_crafttalk_chat_ic_star_outline"
+        android:tint="@color/com_crafttalk_chat_black"
         android:layout_marginBottom="12dp"
-        app:tint="@color/com_crafttalk_chat_black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/feedback_star_2"
         app:layout_constraintBottom_toTopOf="@id/close_feedback" />
@@ -38,8 +38,8 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/com_crafttalk_chat_ic_star_outline"
+        android:tint="@color/com_crafttalk_chat_black"
         android:layout_marginBottom="12dp"
-        app:tint="@color/com_crafttalk_chat_black"
         app:layout_constraintStart_toEndOf="@id/feedback_star_1"
         app:layout_constraintEnd_toStartOf="@+id/feedback_star_3"
         app:layout_constraintBottom_toTopOf="@id/close_feedback" />
@@ -49,8 +49,8 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/com_crafttalk_chat_ic_star_outline"
+        android:tint="@color/com_crafttalk_chat_black"
         android:layout_marginBottom="12dp"
-        app:tint="@color/com_crafttalk_chat_black"
         app:layout_constraintStart_toEndOf="@id/feedback_star_2"
         app:layout_constraintEnd_toStartOf="@+id/feedback_star_4"
         app:layout_constraintBottom_toTopOf="@id/close_feedback" />
@@ -60,8 +60,8 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/com_crafttalk_chat_ic_star_outline"
+        android:tint="@color/com_crafttalk_chat_black"
         android:layout_marginBottom="12dp"
-        app:tint="@color/com_crafttalk_chat_black"
         app:layout_constraintStart_toEndOf="@id/feedback_star_3"
         app:layout_constraintEnd_toStartOf="@+id/feedback_star_5"
         app:layout_constraintBottom_toTopOf="@id/close_feedback" />
@@ -71,8 +71,8 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/com_crafttalk_chat_ic_star_outline"
+        android:tint="@color/com_crafttalk_chat_black"
         android:layout_marginBottom="12dp"
-        app:tint="@color/com_crafttalk_chat_black"
         app:layout_constraintStart_toEndOf="@id/feedback_star_4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/close_feedback" />
@@ -83,7 +83,7 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:src="@drawable/com_crafttalk_chat_ic_arrow_down"
-        app:tint="@color/com_crafttalk_chat_gray_8d8d8d"
+        android:tint="@color/com_crafttalk_chat_gray_8d8d8d"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
