Add sticker message support and related functionality Add option feedback visability Fix problem with document link

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -91,7 +91,7 @@
         app:enable_auto_search="true"
         app:show_upper_limiter="false"
         app:reply_enable="true"
-        app:show_voice_input="true"
+        app:show_voice_input="false"
         app:timeDelayed="1000" />
 
 </LinearLayout>
